
syntax = "proto3";

package idserv;

option go_package = "./idserv";

// The IDService definition
service IDService {
  // NewUUID generates a globally unique ID
  rpc NewUUID (IdRequest) returns (IdReply) {}
}

// The client sends a unique id.
message IdRequest {
  string clientId = 1;
}

// The response message contains the uuid.
message IdReply {
  string uuid = 1;
}